# writer-tool

./: .gitignore  README.md  pyproject.toml
writer_tool/: __init__.py  cli.py  polisher.py  typo_checker.py
writer_tool/tests/: test_typo_checker.py
